<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hint_email">Email</string>
    <string name="hint_name">Name</string>
    <string name="hint_password">Password</string>
    <string name="hint_password_confirm">Password confirm</string>
    <string name="login_title">Login</string>
    <string name="register_title">Register</string>
    <string name="register_btn">Register</string>
    <string name="btn_login">Login</string>
    <string name="to_login_btn">To login</string>
    <string name="to_register_btn">To register</string>
    <string name="register_password_condition_length">At least 8 characters</string>
    <string name="register_password_condition_latin_characters">Latin characters</string>
    <string name="register_password_condition_special_char">One of the characters (!$#%)</string>
    <string name="register_password_condition_digits">Digits</string>
    <string name="register_password_confirm_password_match">Password match</string>
</resources>